# garsync

./: .gitignore  .sops.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  Makefile  README.md  docker-compose.yml  pyproject.toml  release-please-config.json  secrets.env.enc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: deploy-self-hosted.md
docs-site/: astro.config.mjs  package-lock.json  package.json
docs-site/src/content/docs/: 404.md  getting-started.mdx  index.mdx  introduction.mdx
docs-site/src/styles/: custom.css
frontend/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
frontend/src/components/: ActivityTable.astro  DateRangePicker.astro  Heatmap.astro  KpiCards.astro  SyncBadge.astro  TrendChart.astro
frontend/src/layouts/: Layout.astro
frontend/src/lib/: api.ts  chartDefaults.ts  format.ts  stores.ts
frontend/src/pages/: index.astro
src/garsync/: __init__.py  __main__.py  cli.py  client.py  exporter.py  models.py  pipeline.py
src/garsync/api/: __init__.py  deps.py  main.py  schemas.py
src/garsync/db/: __init__.py  connection.py  repository.py  schema.py
tests/: conftest.py  test_connection.py  test_integration_full.py  test_repository_activities.py  test_repository_biometrics.py  test_repository_sleep.py  test_repository_sync_log.py  test_schema.py  test_sync_pipeline.py
tests/api/: conftest.py  test_activities.py  test_biometrics.py  test_sleep.py  test_stats.py  test_sync_status.py
(+10 files in other folders)
