[project]
name = "garsync"
version = "0.1.1"
description = ""
authors = [
    {name = "Manu",email = "mlorentedev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "garminconnect (>=0.2.38,<0.3.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "typer (>=0.24.1,<0.25.0)",
    "rich (>=14.3.3,<15.0.0)",
    "pandas (<3)",
    "streamlit (>=1.54.0,<2.0.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.34.0,<1.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
garsync = "garsync.cli:app"

[dependency-groups]
dev = [
    "typer (>=0.24.1,<0.25.0)",
    "rich (>=14.3.3,<15.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "ruff (>=0.15.4,<0.16.0)",
    "pytest-mock (>=3.0.0,<4.0.0)",
    "httpx (>=0.28.0,<1.0.0)"
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "garminconnect.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "garsync.client"
disallow_untyped_calls = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
